first item with picture, the other items wil follow

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -200,20 +200,19 @@
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/strech-band.jpeg" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Sale Item</h5>
+                            <h5 class="fw-bolder">Stretch Band</h5>
                             <!-- Product price-->
-                            <span class="text-muted text-decoration-line-through">$50.00</span>
-                            $25.00
+                            $10.03
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" target="_blank" href="https://www.amazon.de/Widerstandsb%C3%A4nder-Fitnessb%C3%A4nder-Krafttraining-verschiedenen-Calisthenics/dp/B07F8X6PXJ/ref=sr_1_7_sspa?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=28WXMVRX75IPV&dib=eyJ2IjoiMSJ9.gjmhNbeCWAfwGl7cwWgkIBE7v3lg_7UKHPSDbe7DptQ.aw34UyuLgz9fqv021DJZcXD9kWQ1zo1vmczpTIZ25Nc&dib_tag=se&keywords=fitness&nsdOptOutParam=true&qid=1735822236&s=amazon-devices&sprefix=fitness%2Camazon-devices%2C385&sr=1-7-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9tdGY&th=1">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
