second Item added, I also have to change the size of the pictures of the products. Now it looks terrible because it isnt perfect scaled

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -100,19 +100,19 @@
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/hand-strength-gripper.jpeg" style="object-fit: cover; width: 100%; height: 100%" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Fancy Product</h5>
+                            <h5 class="fw-bolder">Hand Strength Gripper</h5>
                             <!-- Product price-->
-                            $40.00 - $80.00
+                            $7.04
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.amazon.de/Grip-Strengtheners-Adjustable-Exercisers-Rehabilitation/dp/B09MMHTY2H/ref=sr_1_7?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3H1A9QIV7K4KZ&dib=eyJ2IjoiMSJ9.ZLgo6klDZZYhj7BTkAhD2t3Kr4zKPDkUXNt0ZOWOwbsyRR2k6c3pK5x61aZvc0-d0_nU2uvvlw0ObdU5NluGXqd179KtdI5jWXMX2e3HS_ua5IfPVmEA_AQByhCcTHM9-DZK4zCbq4DgQMvYbUNfw_uSVMjc7g9bQHsoMP0PStWI-UAN-fQ02kKXQpSVHp1Y9A2_-V73df7TiD7pyOmfeHRJOBjNJqCYfwV__glJHdNBZOx2SHhel9MySSX5vyLn48tqMB2v_YpG9UEW4BB74hAzd1tel7pUNnJn0KLpPWS02Sj8ufDl_KDqPnn-wBz0wi_20WhijuRwo4ZfHPsLS1Y69ti5VjRMZ9MtVhRxL_aGWNYP3E2RCPANkHgJ0ZZNQCYDv6NwoJszt-qt58I9DS42tk5Y69rsWXu7xX_H3hKEuYbGJeUEJDqlU7AbS1yJ.QQ8VJJaXkVYcESrKA_GdCv4_5ciPwvIT9S1kseVplIw&dib_tag=se&keywords=fitness&nsdOptOutParam=true&qid=1735940721&sprefix=fitness%2Caps%2C200&sr=8-7&th=1">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
