--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -107,12 +107,12 @@
                             <!-- Product name-->
                             <h5 class="fw-bolder">Hand Strength Gripper</h5>
                             <!-- Product price-->
-                            $7.04
+                            €7.04
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.amazon.de/Grip-Strengtheners-Adjustable-Exercisers-Rehabilitation/dp/B09MMHTY2H/ref=sr_1_7?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3H1A9QIV7K4KZ&dib=eyJ2IjoiMSJ9.ZLgo6klDZZYhj7BTkAhD2t3Kr4zKPDkUXNt0ZOWOwbsyRR2k6c3pK5x61aZvc0-d0_nU2uvvlw0ObdU5NluGXqd179KtdI5jWXMX2e3HS_ua5IfPVmEA_AQByhCcTHM9-DZK4zCbq4DgQMvYbUNfw_uSVMjc7g9bQHsoMP0PStWI-UAN-fQ02kKXQpSVHp1Y9A2_-V73df7TiD7pyOmfeHRJOBjNJqCYfwV__glJHdNBZOx2SHhel9MySSX5vyLn48tqMB2v_YpG9UEW4BB74hAzd1tel7pUNnJn0KLpPWS02Sj8ufDl_KDqPnn-wBz0wi_20WhijuRwo4ZfHPsLS1Y69ti5VjRMZ9MtVhRxL_aGWNYP3E2RCPANkHgJ0ZZNQCYDv6NwoJszt-qt58I9DS42tk5Y69rsWXu7xX_H3hKEuYbGJeUEJDqlU7AbS1yJ.QQ8VJJaXkVYcESrKA_GdCv4_5ciPwvIT9S1kseVplIw&dib_tag=se&keywords=fitness&nsdOptOutParam=true&qid=1735940721&sprefix=fitness%2Caps%2C200&sr=8-7&th=1">Go to Amazon</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.amazon.de/Grip-Strengtheners-Adjustable-Exercisers-Rehabilitation/dp/B09MMHTY2H/ref=sr_1_7?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3H1A9QIV7K4KZ&dib=eyJ2IjoiMSJ9.ZLgo6klDZZYhj7BTkAhD2t3Kr4zKPDkUXNt0ZOWOwbsyRR2k6c3pK5x61aZvc0-d0_nU2uvvlw0ObdU5NluGXqd179KtdI5jWXMX2e3HS_ua5IfPVmEA_AQByhCcTHM9-DZK4zCbq4DgQMvYbUNfw_uSVMjc7g9bQHsoMP0PStWI-UAN-fQ02kKXQpSVHp1Y9A2_-V73df7TiD7pyOmfeHRJOBjNJqCYfwV__glJHdNBZOx2SHhel9MySSX5vyLn48tqMB2v_YpG9UEW4BB74hAzd1tel7pUNnJn0KLpPWS02Sj8ufDl_KDqPnn-wBz0wi_20WhijuRwo4ZfHPsLS1Y69ti5VjRMZ9MtVhRxL_aGWNYP3E2RCPANkHgJ0ZZNQCYDv6NwoJszt-qt58I9DS42tk5Y69rsWXu7xX_H3hKEuYbGJeUEJDqlU7AbS1yJ.QQ8VJJaXkVYcESrKA_GdCv4_5ciPwvIT9S1kseVplIw&dib_tag=se&keywords=fitness&nsdOptOutParam=true&qid=1735940721&sprefix=fitness%2Caps%2C200&sr=8-7&th=1" target="_blank">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
@@ -121,12 +121,12 @@
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/jump-rope.jpg" alt="..."  />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Special Item</h5>
+                            <h5 class="fw-bolder">Sprungseil</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -136,13 +136,13 @@
                                 <div class="bi-star-fill"></div>
                             </div>
                             <!-- Product price-->
-                            <span class="text-muted text-decoration-line-through">$20.00</span>
-                            $18.00
+                            <span class="text-muted text-decoration-line-through">€14.11</span>
+                            €13.10
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" target="_blank" href="icones/jump-rope.jpg">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
@@ -151,32 +151,32 @@
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/yoga-mat.jpg" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Sale Item</h5>
+                            <h5 class="fw-bolder">Matte</h5>
                             <!-- Product price-->
-                            <span class="text-muted text-decoration-line-through">$50.00</span>
-                            $25.00
+                            <span class="text-muted text-decoration-line-through">€22.68</span>
+                            €21.17
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" target="_blank" href="https://www.amazon.de/Premium-Yogamatte-Gymnastikmatte-trainingsmatte-Schultertragegurt/dp/B01N67BRCF/ref=sr_1_53?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3F17YI97EHTKH&dib=eyJ2IjoiMSJ9.9wFXvyd5AsmbXwFqcxqnuVnQ7UaAd5t5Jxl9fkKbcU8yR7Wz5eQKumRfXJCFVpkiWqk3R45-LKOSJfsopLOS05GuJFyjtQwL-UoiruuALg0SLNtjkfg0QCUnmlVNThhzLUKNRWWWKyWNgvb7rUoKeqUcxruhl5TcSlSi79p3EOjfbcWJWmUKseOZiBBrRLriVCQMz3LpP7ZOpqfnpJmNN7BbLbtMUyo6OQHyf9v5wcaZGDrxro4vgTWmdihnrd8IITSdrMI8p72lv7v0-KmkrBrkfTlj0wAMSt7Q7uFd59EZmlSh8jZmF2vnac3RMqC7GxP8uM8dLKRJAHIV1FvWJ4if8LFZZDF33V4jM--TR1k.j7KZ3-4g-2yyY-tEjQqZsG-E0rxZIwEFFwYLLAYtc9E&dib_tag=se&keywords=fitness&nsdOptOutParam=true&qid=1735996307&s=sports&sprefix=fitness%2Csports%2C118&sr=1-53&xpid=rq9sn1lHJf-jx&th=1">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/creatine.jpg" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Popular Item</h5>
+                            <h5 class="fw-bolder">Kreatin</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -186,12 +186,12 @@
                                 <div class="bi-star-fill"></div>
                             </div>
                             <!-- Product price-->
-                            $40.00
+                            €20.06
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" target="_blank" href="https://www.amazon.de/ESN-Monohydrate-Muskelaufbau-Performance-Gehirnleistung/dp/B0CNRQ5PCG/ref=sr_1_8?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2QPCCQNI4IL06&dib=eyJ2IjoiMSJ9.gHXrchx3bh9cvobq_gPuh93ePcA51EyS2kUJVaA_Qvwv0V9BVxOg2nmDwmKF0Dflse0KclrPJnU50c8dFQQlmeyCTIR4e4HfyYKV3pASQpt0Cguzo_Up9-N2Z_HQv5VwLDHWQzRm5_bjAP_QTHafRc_jSH_TZ2cxiBf3FUk6Z7KHiBypO1ZAk_3YLze2tNh9gCM9SXSy31HZ9P4FOg5oSu7eGPUC5AuZUnOxfcUMcuWt4tagQ6WkffQalGazeorzS1IkxOOIjLzaY9HKqs4rF2L4F2jsLKF1fkGDKkqmSWgaTfiwNXpMQA7hDVrIlHWQRRzPYO30dBcQUAZPO57nc--5UWwkQvdb1IWDQslrymA.xtlzyBJduXYA5l2bpRDNc30m3V7uHVo9jIExykEXaPs&dib_tag=se&keywords=esn&nsdOptOutParam=true&qid=1735997040&s=sports&sprefix=esn%2Csports%2C80&sr=1-8&th=1">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
@@ -205,9 +205,9 @@
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Stretch Band</h5>
+                            <h5 class="fw-bolder">Stretch-Band</h5>
                             <!-- Product price-->
-                            $10.03
+                            €10.03
                         </div>
                     </div>
                     <!-- Product actions-->
@@ -219,19 +219,20 @@
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/dumbell.jpg" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Fancy Product</h5>
+                            <h5 class="fw-bolder">Hanteln</h5>
                             <!-- Product price-->
-                            $120.00 - $280.00
+                            <span class = "text-muted text-decoration-line-through">€100.84 - €252.10</span><br>
+                            €80.66 - €213.40
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" target="_blank" href="https://www.amazon.de/EnterSports-Platzsparende-Gewichtsstufen-2-12kg-Fitnessstudio-K%C3%B6rpertraining/dp/B0D1P694JJ/ref=sxin_15_pa_sp_search_thematic_sspa?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&content-id=amzn1.sym.a9311eef-12ac-446f-b726-c0ef6bba43e7%3Aamzn1.sym.a9311eef-12ac-446f-b726-c0ef6bba43e7&crid=MMJ2PHD18W82&cv_ct_cx=Hanteln&keywords=Hanteln&nsdOptOutParam=true&pd_rd_i=B0BZQ4J4B4&pd_rd_r=b121e2f0-76a5-44d9-8abd-de04ad26d4da&pd_rd_w=VfeRC&pd_rd_wg=2Wr8M&pf_rd_p=a9311eef-12ac-446f-b726-c0ef6bba43e7&pf_rd_r=XNDQ62TM3A9VP38HVH1Y&qid=1735995856&s=sports&sbo=RZvfv%2F%2FHxDF%2BO5021pAnSA%3D%3D&sprefix=hanteln%2Csports%2C91&sr=1-1-e635f62e-bc0c-4c62-bd61-6b481ef425e3-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9zZWFyY2hfdGhlbWF0aWM&th=1">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
@@ -240,12 +241,12 @@
                     <!-- Sale badge-->
                     <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/esn-bars.jpg" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Special Item</h5>
+                            <h5 class="fw-bolder">ESN Riegel</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -255,25 +256,25 @@
                                 <div class="bi-star-fill"></div>
                             </div>
                             <!-- Product price-->
-                            <span class="text-muted text-decoration-line-through">$20.00</span>
-                            $18.00
+                            <span class="text-muted text-decoration-line-through"></span>
+                            €28.68
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" target="_blank" href="https://www.amazon.de/ESN-Designer-Oatbar-Box-Riegel/dp/B0CG2D6YCC/ref=sr_1_19?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2QPCCQNI4IL06&dib=eyJ2IjoiMSJ9.gHXrchx3bh9cvobq_gPuh93ePcA51EyS2kUJVaA_Qvwv0V9BVxOg2nmDwmKF0Dflse0KclrPJnU50c8dFQQlmeyCTIR4e4HfyYKV3pASQpt0Cguzo_Up9-N2Z_HQv5VwLDHWQzRm5_bjAP_QTHafRc_jSH_TZ2cxiBf3FUk6Z7KHiBypO1ZAk_3YLze2tNh9gCM9SXSy31HZ9P4FOg5oSu7eGPUC5AuZUnOxfcUMcuWt4tagQ6WkffQalGazeorzS1IkxOOIjLzaY9HKqs4rF2L4F2jsLKF1fkGDKkqmSWgaTfiwNXpMQA7hDVrIlHWQRRzPYO30dBcQUAZPO57nc--5UWwkQvdb1IWDQslrymA.xtlzyBJduXYA5l2bpRDNc30m3V7uHVo9jIExykEXaPs&dib_tag=se&keywords=esn&nsdOptOutParam=true&qid=1735997040&s=sports&sprefix=esn%2Csports%2C80&sr=1-19&th=1">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
             <div class="col mb-5">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                    <img class="card-img-top" src="icones/pull-up-bar.jpg" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
                             <!-- Product name-->
-                            <h5 class="fw-bolder">Popular Item</h5>
+                            <h5 class="fw-bolder">Klimmzugstange</h5>
                             <!-- Product reviews-->
                             <div class="d-flex justify-content-center small text-warning mb-2">
                                 <div class="bi-star-fill"></div>
@@ -283,12 +284,12 @@
                                 <div class="bi-star-fill"></div>
                             </div>
                             <!-- Product price-->
-                            $40.00
+                            €39.99
                         </div>
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="https://www.amazon.de/Bowfar-Klimmzugstange-T%C3%BCrrahmen-Belastbare-Gepolsterten/dp/B0CNPQH6K3/ref=sr_1_11?crid=2EIJD2HYZEH2J&dib=eyJ2IjoiMSJ9.JbdIdPQYfSTzEFmrKn-EfRnZkg2cONV6b7TprF9p4Ax75bxNy-0U7QjVtylXSTXuZPqJyQ3TZq8VU7BSBut8TmTZWffy4G0hRugqyLsEGqOFi_iLnoHEqxK-JpUUH_70l1OBRo6bQ-5ldeN6vLugBMjCLL7FR55my4eBN9mfJzQ97TYeo0eJ9rOWKjXx8CvPcrYKoMVIC2TFx5w8bAK7939n3gGViqdgzZD0T-6Z2_ozZu9-mp9YDCLg47Eimu07vMpnALLEZ3xJOHiBIKEjgwkbDLSBrvl4oC3euFRggRS7Yt7KekFjhTvv379hJcl1AYpRHObEGfYVsk9U0txzEHlWxgqDGmogRyoG9xyA2BU.56VLySNDi9JRKXafK83G1BHxLQSBPXG0HvurRswsX_o&dib_tag=se&keywords=klimmzugstange+t%C3%BCrrahmen&nsdOptOutParam=true&qid=1735995271&s=sports&sprefix=kl%2Csports%2C113&sr=1-11" target="_blank">Go to Amazon</a></div>
                     </div>
                 </div>
             </div>
