added lines between sections

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -29,7 +29,7 @@
 <!-- Main Content -->
 <div class="container">
     <!-- Section 1: Was ist eine gesunde Ernährung? -->
-    <section class="section">
+    <section class="section" style="border-bottom: 2px solid #ccc">
         <h2>Was ist eine gesunde Ernährung?</h2>
         <p>
             Eine gesunde Ernährung bedeutet, den Körper mit den richtigen Mengen an Nährstoffen zu versorgen, die er für Energie, Wachstum und Regeneration benötigt. Sie besteht aus einer ausgewogenen Kombination der drei Hauptnährstoffe:
@@ -56,7 +56,7 @@
         </ul>
     </section>
     <!-- Section 2: Was ist eine ausgewogene Ernährung? -->
-    <section class="section">
+    <section class="section" style="border-bottom: 2px solid #ccc" >
         <h2>Was ist eine ausgewogene Ernährung?</h2>
         <p>
             Eine ausgewogene Ernährung bedeutet, dass alle wichtigen Nährstoffe in den richtigen Mengen aufgenommen werden, um den Körper gesund und leistungsfähig zu halten. Sie umfasst:
@@ -80,7 +80,7 @@
     </section>
 
     <!-- Section 3: Bulking und Cutting -->
-    <section class="section">
+    <section class="section" style="border-bottom: 2px solid #ccc">
         <h2>Bulking und Cutting</h2>
         <p>
             Beide Strategien werden häufig im Fitnessbereich eingesetzt, um bestimmte Ziele zu erreichen:
