--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -132,5 +132,9 @@
     </section>
 
 </div>
+
+<footer class="footer" >
+      <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
+</footer>
 </body>
 </html>
