On the shoppage a switcher so that you can see more products and not only eight. On the basket we will also need javascript but for now a good idea made by bootstrap

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -262,36 +262,13 @@
         </div>
     </div>
 </section>
-
-        <!--<div style="clear: left">
-            <h1 class = "styleForHeader">Shop</h1>
-            <div class="search">
-                <input type="text" id="searchInput" placeholder="Search...">
-                <button id="searchButton">Search</button>
-            </div>
-        </div>-->
-        <!--<div class="shop-items">
-            <div class="item1">
-
-            </div>
-            <div class="item2">
-
-            </div>
-            <div class="item3">
-
-            </div>
-            <div class="item4">
-
-            </div>
-            <div class="item5">
-
-            </div>
-            <div class="item6">
-
-            </div>
-        </div>-->
-
-
-
+<div class="page-turner">
+    <!--
+    The idea here is to create a switcher. There is like  Page 1 >
+    if you click the button to the left or right you come there to see the other products.
+    To do that we need javascript, so we have to wait. This is just a comment to remember this idea.
+    -->
+    <p style="text-align: center; color: white"><button><-</button>Page 1 <button>-></button></p>
+</div>
 </body>
 </html>
