second item added on shopping basket page to make it look more realistic

--- a/fitness-and-health-website/shopping-basket.html
+++ b/fitness-and-health-website/shopping-basket.html
@@ -55,6 +55,29 @@
         </div>
 
 
+        <div class="col-md-6 mb-3">
+            <div class="card">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="https://via.placeholder.com/150" class="img-fluid rounded-start" alt="Produktbild">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Produktname 2</h5>
+                            <p class="card-text">Kurze Beschreibung des Produkts.</p>
+                            <p class="card-text"><strong>Preis:</strong> ....</p>
+                            <div class="d-flex justify-content-between">
+                                <input type="number" class="form-control" value="1" min="1" style="width: 70px;">
+                                <button class="btn btn-danger btn-sm">Entfernen</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 </div>
 
