to see the end payment and a link to the kasse, made by bootstrap

--- a/fitness-and-health-website/shopping-basket.html
+++ b/fitness-and-health-website/shopping-basket.html
@@ -78,7 +78,10 @@
     </div>
 
 
-
+    <div class="mt-4 text-end">
+        <h4>Gesamt: ....</h4>
+        <button class="btn btn-warning btn-lg">Zur Kasse</button>
+    </div>
 </div>
 
 
