--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -6,7 +6,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-shop.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </head>
 <body class="index">
@@ -36,17 +36,65 @@
 
 </div>
 
-<div class="image-container">
-    <img src="icones/shop-picture.jpg" class="img">
-    <div class="image-text">
-        <h1 class="picture-header">
-            Willkommen
-        </h1>
-        <h2 class="picture-subheader">
-            Fitness&Health Shop
-        </h2>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style = "pointer-events: none;">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <div class="image-container">
+                <img src="icones/shop-picture.jpg" class="img">
+                <div class="image-text">
+                    <h1 class="picture-header">
+                        Willkommen
+                    </h1>
+                    <h2 class="picture-subheader">
+                        Fitness&Health Shop
+                    </h2>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="image-container">
+                <img src="icones/background-for-shop-weights.jpg" class="img">
+                <div class="image-text">
+                    <h1 class="picture-header">
+                        Willkommen
+                    </h1>
+                    <h2 class="picture-subheader">
+                        Fitness&Health Shop
+                    </h2>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="image-container">
+                <img src="icones/shop-background-picture-runners-and-weights.jpg" class="img">
+                <div class="image-text">
+                    <h1 class="picture-header">
+                        Willkommen
+                    </h1>
+                    <h2 class="picture-subheader">
+                        Fitness&Health Shop
+                    </h2>
+                </div>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="image-container">
+                <img src="icones/background-shop-letters.jpg" class="img">
+                <div class="image-text">
+                    <h1 class="picture-header">
+                        Willkommen
+                    </h1>
+                    <h2 class="picture-subheader">
+                        Fitness&Health Shop
+                    </h2>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+
+
 <br>
 <br>
 <br>
