added a new page for payment. With javasript we will make it more functional.

--- a/fitness-and-health-website/shopping-basket.html
+++ b/fitness-and-health-website/shopping-basket.html
@@ -80,7 +80,7 @@
 
     <div class="mt-4 text-end">
         <h4>Gesamt: ....</h4>
-        <button class="btn btn-warning btn-lg">Zur Kasse</button>
+        <button class="btn btn-warning btn-lg"><a href="payment.html">Zur Kasse</a></button>
     </div>
 </div>
 
