--- a/fitness-and-health-website/payment.html
+++ b/fitness-and-health-website/payment.html
@@ -1,11 +1,30 @@
 <!Doctype HTML>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="shopping-basket.css">
     <meta name="viewport" content="width=device-width">
+
     <title>Payment</title>
 </head>
 <body>
+
+    <div class="fixed-top-bar navbar navbar-expand-lg navbar-dark">
+        <div class="homeButton-wrapper position-relative" style = "float: left;">
+            <button class="homeButton"></button>
+            <div class="sidebar d-flex flex-column p-5" style="background-color: black; border-right: 3px solid yellow">
+                <ul class="nav flex-column">
+
+                    <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
+                    <li class="nav-item li-items-in-sidebar"><a href="shop.html" class="nav-link text-in-sidebar">Shop</a></li>
+                    <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
+                    <li class="nav-item li-items-in-sidebar"><a href="nutrition.html" class="nav-link text-in-sidebar">Ernährung</a></li>
+                    <li class="nav-item li-items-in-sidebar"><a href="about-us.html" class="nav-link text-in-sidebar">Über uns</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <h1 style="text-align: center; color: white">Payment</h1>
 </body>
 </html>
