added the logo in the nutrition page

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -24,6 +24,10 @@
         </div>
     </div>
     <h1 class="title">Ernährung</h1>
+
+    <div class="logo-wrapper">
+        <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
+    </div>
 </div>
 
 <!-- Main Content -->
