styled the top bar

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -24,7 +24,8 @@
             </ul>
         </div>
     </div>
-    <h1 class="page_header">Shop</h1>
+
+    <h1 class="page-header">Shop</h1>
     <form class="d-flex">
     <button class="btn btn-outline-light" type = "submit" onclick="event.preventDefault(); document.location = 'shopping-basket.html'">
         <img src="icones/shopping-cart.png">
