added a footer in payment

--- a/fitness-and-health-website/payment.html
+++ b/fitness-and-health-website/payment.html
@@ -31,5 +31,9 @@
         <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
     </div>
 </div>
+
+<footer class="footer" >
+    <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
+</footer>
 </body>
 </html>
