--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -34,7 +34,9 @@
                 <h2>Pläne für ältere Menschen</h2>
                 <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
                 <ul>
-
+                    <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.</li>
+                    <li><strong>Balance-Übungen:</strong> Fördert die Standfestigkeit und Sturzprophylaxe.</li>
+                    <li><strong>Leichtes Krafttraining:</strong> Unterstützt den Erhalt der Muskelgesundheit.</li>
                 </ul>
             </section>
             <section class="plans">
