updating the cards (text, colour, format)

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -50,22 +50,15 @@
             </section>
         </main>
     </div>
-    <div class="explanation">
-        <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
-        <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
-    </div>
-
-    <div class="d-flex m-3">
-    <div class="card m-1" style="width: 18rem;">
+    <div class="d-flex justify-content-center m-3">
+        <div class="card m-1" style="width: 20rem;">
             <div class="card-body">
                 <h5 class="card-title">Trainingspläne</h5>
                 <p class="card-text">This is a simple card with some text content.</p>
                 <a class="btn btn-primary">Trainingspläne Beeinträchtigte</a>
-
             </div>
-
-    </div>
-        <div class="card m-1" style="width: 18rem;">
+        </div>
+        <div class="card m-1" style="width: 20rem;">
             <div class="card-body">
                 <h5 class="card-title">Trainingspläne</h5>
                 <p class="card-text">This is a simple card with some text content.</p>
@@ -73,6 +66,12 @@
             </div>
         </div>
     </div>
+
+    <div class="explanation">
+        <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
+        <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+    </div>
+
     <footer>
         <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
     </footer>
