cards are now bigger and better formated

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -51,14 +51,14 @@
         </main>
     </div>
     <div class="d-flex justify-content-center m-3">
-        <div class="card m-1" style="width: 20rem;">
+        <div class="card m-1">
             <div class="card-body">
                 <h5 class="card-title">Trainingspläne</h5>
                 <p class="card-text">This is a simple card with some text content.</p>
                 <a class="btn btn-primary">Trainingspläne Beeinträchtigte</a>
             </div>
         </div>
-        <div class="card m-1" style="width: 20rem;">
+        <div class="card m-1">
             <div class="card-body">
                 <h5 class="card-title">Trainingspläne</h5>
                 <p class="card-text">This is a simple card with some text content.</p>
