--- a/fitness-and-health-website/shopping-basket.html
+++ b/fitness-and-health-website/shopping-basket.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href = "shopping-basket.css" type="text/css" rel="stylesheet">
-
     <title>Warenkorb</title>
 </head>
 <body>
-
-
-
-<div class="fixed-top-bar navbar navbar-expand-lg navbar-dark">
+<div class="top-bar navbar navbar-dark">
     <div class="homeButton-wrapper position-relative" style = "float: left;">
         <button class="homeButton"></button>
-        <div class="sidebar d-flex flex-column p-5" style="background-color: black; border-right: 3px solid yellow">
+        <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
             <ul class="nav flex-column">
-
                 <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
                 <li class="nav-item li-items-in-sidebar"><a href="shop.html" class="nav-link text-in-sidebar">Shop</a></li>
                 <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
@@ -25,10 +20,11 @@
             </ul>
         </div>
     </div>
+    <h1 class = "header-in-shopping-basket">Warenkorb</h1>
 </div>
 
 <div class="container mt-5">
-    <h1 class = "header-in-shopping-basket">Warenkorb</h1>
+
 
 
     <div class="row mt-4">
