--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -7,23 +7,29 @@
     <link rel="stylesheet" type="text/css" href="stylesheet-about-us.css">
     <title>Über uns</title>
 </head>
-<body style="background-color: black; overflow: auto; margin: 0; padding: 0;">
+<body style="background-color: black; overflow: auto; padding: 0; margin-top: 8%">
 
 
-<div class="homeButton-wrapper position-relative" style = "float: left;">
-    <button class="homeButton"></button>
-    <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
-        <ul class="nav flex-column">
-            <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
-            <li class="nav-item li-items-in-sidebar"><a href="shop.html" class="nav-link text-in-sidebar">Shop</a></li>
-            <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
-            <li class="nav-item li-items-in-sidebar"><a href="nutrition.html" class="nav-link text-in-sidebar">Ernährung</a></li>
-        </ul>
+<div class="top-bar">
+    <div class="menu-button-wrapper">
+        <div class="menu-button">
+            <span>☰</span>
+        </div>
+        <div class="sidebar">
+            <ul>
+                <li class="li-items-in-sidebar"><a href="index.html" class="text-in-sidebar">Startseite</a></li>
+                <li class="li-items-in-sidebar"><a href="shop.html" class="text-in-sidebar">Shop</a></li>
+                <li class="li-items-in-sidebar"><a href="trainings-plan.html" class="text-in-sidebar">Training</a></li>
+                <li class="li-items-in-sidebar"><a href="nutrition.html" class="text-in-sidebar">Ernährung</a></li>
+            </ul>
+        </div>
+    </div>
+    <h1 class="title">Wer sind wir</h1>
+
+    <div class="logo-wrapper">
+        <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
     </div>
 </div>
-
-<h2 class="headersInAboutUs">Wer sind wir</h2>
-
 
     <table class = "tableStyleInAboutUs">
         <tr>
