changed the own coded home navbar to a bootstrap navbar

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -8,43 +8,43 @@
     <title>FitnessAndHealth</title>
 </head>
 <body class="index">
-    <section>
-    <nav class="Top">
-        <br>
-        <br>
-
-    </nav>
-    <nav class="Top">
-
-        <img class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
-        
-        <button class ="TopButtons" title ="Besuche unseren Shop" onclick="document.location='shop.html'"><img src="icones/bx-shopping-bag.svg" alt="" style = "padding-bottom: 10%">Shop</button>
-
-
-
-        <button class="TopButtons" onclick="document.location = 'nutrition.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="" style = "padding-bottom: 3%">Ernährungspläne</button>
-
-
-
-        <button class="TopButtons" title="Gehe zu unseren Trainingsplänen" onclick="document.location ='trainings-plan.html'"><img src="icones/bx-run.svg" alt="" style="padding-bottom: 3%">Trainingspläne</button>
-
-
-        <button class="TopButtons" onclick="document.location = 'about-us.html'" title="Über uns"><img src="icones/bxs-group.svg" alt="" style = "padding-bottom: 3%">Über uns</button>
-
-        <br>
-        <br>
-
-    </nav>
-
-    <nav class="Top">
-    <br>
-    <br>
-
-    </nav>
-    </section>
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+            <img src="icones/LOGO_05-remove.png" alt="Home" width="50" height="50">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="shop.html">
+                        <img src="icones/bx-shopping-bag.svg" alt="Shop" width="20" height="20"> Shop
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="nutrition.html">
+                        <img src="icones/bx-baguette.svg" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="trainings-plan.html">
+                        <img src="icones/bx-run.svg" alt="Trainingspläne" width="20" height="20"> Trainingspläne
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about-us.html">
+                        <img src="icones/bxs-group.svg" alt="Über uns" width="20" height="20"> Über uns
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
     <div class="MainPage">
-        <div style = "margin-top: 2%; margin-bottom: 2%">
+        <div style =  "margin-bottom: 2%">
             <h1 class="headLine">Deine Fitnessreise beginnt</h1>
         </div>
 
