--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href ="stylesheet.css" type="text/css" rel ="stylesheet">
 
     <title>FitnessAndHealth</title>
@@ -20,22 +20,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="shop.html">
+                    <a class="nav-link textInNavBar" href="shop.html">
                         <img src="icones/bx-shopping-bag.svg" alt="Shop" width="20" height="20"> Shop
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="nutrition.html">
+                    <a class="nav-link textInNavBar" href="nutrition.html">
                         <img src="icones/bx-baguette.svg" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="trainings-plan.html">
+                    <a class="nav-link textInNavBar" href="trainings-plan.html">
                         <img src="icones/bx-run.svg" alt="Trainingspläne" width="20" height="20"> Trainingspläne
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about-us.html">
+                    <a class="nav-link textInNavBar" href="about-us.html">
                         <img src="icones/bxs-group.svg" alt="Über uns" width="20" height="20"> Über uns
                     </a>
                 </li>
@@ -95,60 +95,72 @@
 
 
 
-   <table id = "tableInMain">
-       <tr>
-           <td class = "tdInMain"><p id = "@InTableInMain" style="padding-left: 10%">@ Fitness and Health 2024</p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline"><a href = "about-us.html" class = "styleForEmailInMain">Über uns</a></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Rechtliches</p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Folge uns auf</td>
-       </tr>
-       <tr>
-           <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain">Kontakte:</p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain">Impressum</p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain">Instagram</p></td>
-       </tr>
-       <tr>
-           <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Jan</a></p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain">Datenschutz</p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain">TikTok</p></td>
-       </tr>
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
-       <tr>
-           <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:l.parzer@students.htl-leonding.ac.at" class = "styleForEmailInMain">Lorenz</a></p></td>
-           <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain">Youtube</p></td>
-       </tr>
+    <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4" style = "color: yellow">Unsere Welt</h5>
 
-       <tr>
-           <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:e.music1@students.htl-leonding.ac.at" class = "styleForEmailInMain">Ernad</a></p></td>
-           <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain">Facebook</p></td>
-       </tr>
+                    <ul class="list-unstyled mb-4">
+                        <li>
+                            <a href="shop.html" class="text-white">Shop</a>
+                        </li>
+                        <li>
+                            <a href="trainings-plan.html" class="text-white">Trainingspläne</a>
+                        </li>
+                        <li>
+                            <a href="nutrition.html" class="text-white">Ernährungspläne</a>
+                        </li>
+                        <li>
+                            <a href="about-us.html" class="text-white">Über uns</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
 
-       <tr>
-           <td></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain"><a href = "mailto:m.solomon@students.htl-leonding.ac.at" class = "styleForEmailInMain">Mario</a></p></td>
-           <td></td>
-           <td></td>
-       </tr>
 
-       <tr>
-           <td><br></td>
-       </tr>
 
-       <tr>
-           <td><br></td>
-       </tr>
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4" style = "color: yellow">Karriere</h5>
 
-       <tr>
-           <td><br></td>
-       </tr>
-   </table>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-white">Jobs</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
 
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4" style = "color: yellow">Kontaktiere uns</h5>
+
+                    <div class="form-outline form-white mb-4">
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Klicke hier</a>
+
+                    </div>
+
+                </div>
+                <!--Grid column-->
+                <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <img src="icones/LOGO_05-remove.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                </div>
+            </div>
+            <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+
+    </footer>
+
+</div>
+<!-- End of .container -->
 
 </body>
 </html>
