added effect to the footer.

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -109,16 +109,16 @@
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="text-white">Shop</a>
+                            <a href="shop.html" class="text-white hover-effects">Shop</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="text-white">Trainingspläne</a>
+                            <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="text-white">Ernährungspläne</a>
+                            <a href="nutrition.html" class="text-white hover-effects">Ernährungspläne</a>
                         </li>
                         <li>
-                            <a href="about-us.html" class="text-white">Über uns</a>
+                            <a href="about-us.html" class="text-white hover-effects">Über uns</a>
                         </li>
                     </ul>
                 </div>
@@ -132,7 +132,7 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="text-white">Jobs</a>
+                            <a href="#!" class="text-white hover-effects">Jobs</a>
                         </li>
                     </ul>
                 </div>
@@ -143,7 +143,7 @@
                     <h5 class="text-uppercase mb-4" style = "color: yellow">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain">Klicke hier</a>
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
 
                     </div>
 
