first step to make the homepage to a bootstrap designed page

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -49,47 +49,46 @@
             <h1 class="headLine">Deine Fitnessreise beginnt</h1>
         </div>
 
-        <div class="quotes">
-            <h2 class="quote2 set1">Mindfulness is the key to a healthy mind</h2>
-            <h2 class="quote3 set1">Love the Pain</h2>
-            <h2 class="quote4 set1">Discipline equals freedom</h2>
-            <h2 class="quote5 set1">Fitness is the essence of life</h2>
+        <div class="container quotes position-relative">
+            <div class="row">
+                <h2 class="quote2 set1 col-12">Mindfulness is the key to a healthy mind</h2>
+                <h2 class="quote3 set1 col-12">Love the Pain</h2>
+                <h2 class="quote4 set1 col-12">Discipline equals freedom</h2>
+                <h2 class="quote5 set1 col-12">Fitness is the essence of life</h2>
 
-            <h2 class="quote2 set2">Muscle gain is the best medicine</h2>
-            <h2 class="quote3 set2">Healthy eating is the key to a healthy mind</h2>
-            <h2 class="quote4 set2">Mindfulness and self-care are essential for a healthy body</h2>
-            <h2 class="quote5 set2">Stay strong, stay motivated, and stay consistent</h2>
+                <h2 class="quote2 set2 col-12">Muscle gain is the best medicine</h2>
+                <h2 class="quote3 set2 col-12">Healthy eating is the key to a healthy mind</h2>
+                <h2 class="quote4 set2 col-12">Mindfulness and self-care are essential for a healthy body</h2>
+                <h2 class="quote5 set2 col-12">Stay strong, stay motivated, and stay consistent</h2>
 
-            <h2 class="quote2 set3">The journey to fitness is not a destination, but a journey</h2>
-            <h2 class="quote3 set3">Be yourself, be confident, and be strong</h2>
-            <h2 class="quote4 set3">Remember, the greatest glory in living lies not in never falling</h2>
-            <h2 class="quote5 set3">The future belongs to those who believe in the beauty of their dreams</h2>
+                <h2 class="quote2 set3 col-12">The journey to fitness is not a destination, but a journey</h2>
+                <h2 class="quote3 set3 col-12">Be yourself, be confident, and be strong</h2>
+                <h2 class="quote4 set3 col-12">Remember, the greatest glory in living lies not in never falling</h2>
+                <h2 class="quote5 set3 col-12">The future belongs to those who believe in the beauty of their dreams</h2>
 
-            <h2 class="quote2 set4">Stay positive, stay focused, and stay energized</h2>
-            <h2 class="quote3 set4">The world is a stage, and all the actors must play their part</h2>
-            <h2 class="quote4 set4">The key to success is not to stop questioning, but stop chase the wrong answer</h2>
-            <h2 class="quote5 set4">Believe in yourself, and you'll achieve great things</h2>
+                <h2 class="quote2 set4 col-12">Stay positive, stay focused, and stay energized</h2>
+                <h2 class="quote3 set4 col-12">The world is a stage, and all the actors must play their part</h2>
+                <h2 class="quote4 set4 col-12">The key to success is not to stop questioning, but stop chase the wrong answer</h2>
+                <h2 class="quote5 set4 col-12">Believe in yourself, and you'll achieve great things</h2>
+            </div>
         </div>
-        <div class="below">
-
+        <div class="container">
             <div class="pictureContainer">
-
                 <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
                 <div class="textContent">
                     <div class="h2Box">
                         <h2 class="h2onSite">Was dich auf unserer Webseite erwartet</h2>
                     </div>
-
                     <p class="textForWebsite" id="fadeInText">
                         Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.
                         Fit zu bleiben bei Beeinträchtigungen ist schwer, deswegen stellt diese Webseite leichte, verständnisvolle und gut umsetzbare Trainigspläne bereit.
                         Nicht nur Trainingspläne auch Ernährungspläne werden für unsere Kunden erstellt. Unsere Pläne sind nicht nur auf schnelle Ergebnisse ausgelegt, sondern auf langfristige, nachhaltige Verbesserungen der körperlichen und mentalen Gesundheit.
                         Wir bieten nicht nur Übungen und Pläne, sondern auch umfassende Beratung, motivierende Inhalte und praktische Tipps, die den Alltag erleichtern. Unser Ziel ist es, Barrieren zu überwinden und Menschen dabei zu unterstützen, ein aktives und gesundes Leben zu führen – unabhängig von ihren Herausforderungen.
                         Über unseren Shop kann man sich Fitnessprodukte, Nahrungsergänzungsmittel usw. kaufen. Mit unserer Fitnesswebseite wollen wir auch Personen, für die es im Vergleich schwer ist Sport zu treiben,
-                        einen Anstoß geben und ihnen bewusst machen, dass es möglich ist und dass sie mit unseren Übungen wieder fit werden.</p>
+                        einen Anstoß geben und ihnen bewusst machen, dass es möglich ist und dass sie mit unseren Übungen wieder fit werden.
+                    </p>
                 </div>
             </div>
-
         </div>
    </div>
 
