fixed the quotes and the box below so that it is like before just with bootstrap

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -72,7 +72,7 @@
                 <h2 class="quote5 set4 col-12">Believe in yourself, and you'll achieve great things</h2>
             </div>
         </div>
-        <div class="container">
+        <div class="container mt-0">
             <div class="pictureContainer">
                 <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
                 <div class="textContent">
@@ -81,7 +81,7 @@
                     </div>
                     <p class="textForWebsite" id="fadeInText">
                         Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.
-                        Fit zu bleiben bei Beeinträchtigungen ist schwer, deswegen stellt diese Webseite leichte, verständnisvolle und gut umsetzbare Trainigspläne bereit.
+                        Fit zu bleiben bei Beeinträchtigungen ist schwer, deswegen stellt diese Webseite leichte, verständnisvolle und gut umsetzbare Trainingspläne bereit.
                         Nicht nur Trainingspläne auch Ernährungspläne werden für unsere Kunden erstellt. Unsere Pläne sind nicht nur auf schnelle Ergebnisse ausgelegt, sondern auf langfristige, nachhaltige Verbesserungen der körperlichen und mentalen Gesundheit.
                         Wir bieten nicht nur Übungen und Pläne, sondern auch umfassende Beratung, motivierende Inhalte und praktische Tipps, die den Alltag erleichtern. Unser Ziel ist es, Barrieren zu überwinden und Menschen dabei zu unterstützen, ein aktives und gesundes Leben zu führen – unabhängig von ihren Herausforderungen.
                         Über unseren Shop kann man sich Fitnessprodukte, Nahrungsergänzungsmittel usw. kaufen. Mit unserer Fitnesswebseite wollen wir auch Personen, für die es im Vergleich schwer ist Sport zu treiben,
