--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -77,7 +77,7 @@
                 <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
                 <div class="textContent">
                     <div class="h2Box">
-                        <h2 class="h2onSite">Was dich auf unserer Webseite erwartet</h2>
+                        <h2 class="h2onSite" style="font-size: 1.3em">Was dich auf unserer Webseite erwartet</h2>
                     </div>
                     <p class="textForWebsite" id="fadeInText">
                         Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.
