--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -31,7 +31,7 @@
 </div>
 
 <!-- Main Content -->
-<div class="container">
+<div class="container" style="margin-top: 3%">
     <!-- Section 1: Was ist eine gesunde Ernährung? -->
     <section class="section" style="border-bottom: 2px solid #ccc">
         <h2>Was ist eine gesunde Ernährung?</h2>
