updazed sidebar in nutrition and about us

--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -21,6 +21,7 @@
                 <li class="li-items-in-sidebar"><a href="shop.html" class="text-in-sidebar">Shop</a></li>
                 <li class="li-items-in-sidebar"><a href="trainings-plan.html" class="text-in-sidebar">Training</a></li>
                 <li class="li-items-in-sidebar"><a href="nutrition.html" class="text-in-sidebar">Ernährung</a></li>
+                <li class="li-items-in-sidebar"><a href="about-us.html" class="text-in-sidebar">Über uns</a></li>
             </ul>
         </div>
     </div>
