fixed the footer

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -29,55 +29,63 @@
     </div>
 </div>
 
-    <div class="content" style = "clear: left">
-        <header class="hero">
-            <p>Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern.</p>
-        </header>
-        <main>
-            <section class="plans">
-                <h2>Pläne für ältere Menschen</h2>
-                <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
-                <ul>
-                    <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.</li>
-                    <li><strong>Balance-Übungen:</strong> Fördert die Standfestigkeit und Sturzprophylaxe.</li>
-                    <li><strong>Leichtes Krafttraining:</strong> Unterstützt den Erhalt der Muskelgesundheit.</li>
-                </ul>
-            </section>
-            <section class="plans">
-                <h2>Pläne für beeinträchtigte Menschen</h2>
-                <p>Individuell angepasste Übungen, die verschiedene Einschränkungen berücksichtigen:</p>
-                <ul>
-                    <li><strong>Stuhlübungen:</strong> Übungen, die im Sitzen durchgeführt werden können.</li>
-                    <li><strong>Mobilitätstraining:</strong> Hilft, die Bewegungsfreiheit zu verbessern.</li>
-                    <li><strong>Individuelle Anpassungen:</strong> Programme, die speziell auf die Bedürfnisse abgestimmt sind.</li>
-                </ul>
-            </section>
-        </main>
-    </div>
-    <div class="d-flex justify-content-center m-3">
-        <div class="card m-1">
-            <div class="card-body">
-                <h5 class="card-title">Trainingspläne</h5>
-                <p class="card-text">This is a simple card with some text content.</p>
-                <a class="btn btn-primary">Trainingspläne Beeinträchtigte</a>
-            </div>
-        </div>
-        <div class="card m-1">
-            <div class="card-body">
-                <h5 class="card-title">Trainingspläne</h5>
-                <p class="card-text">This is a simple card with some text content.</p>
-                <a class="btn btn-primary">Trainingspläne ältere Menschen</a>
-            </div>
+<div class="content" style="clear: left">
+    <header class="hero">
+        <p>Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und
+            Wohlbefinden zu fördern.</p>
+    </header>
+    <main>
+        <section class="plans">
+            <h2>Pläne für ältere Menschen</h2>
+            <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
+            <ul>
+                <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.
+                </li>
+                <li><strong>Balance-Übungen:</strong> Fördert die Standfestigkeit und Sturzprophylaxe.</li>
+                <li><strong>Leichtes Krafttraining:</strong> Unterstützt den Erhalt der Muskelgesundheit.</li>
+            </ul>
+        </section>
+        <section class="plans">
+            <h2>Pläne für beeinträchtigte Menschen</h2>
+            <p>Individuell angepasste Übungen, die verschiedene Einschränkungen berücksichtigen:</p>
+            <ul>
+                <li><strong>Stuhlübungen:</strong> Übungen, die im Sitzen durchgeführt werden können.</li>
+                <li><strong>Mobilitätstraining:</strong> Hilft, die Bewegungsfreiheit zu verbessern.</li>
+                <li><strong>Individuelle Anpassungen:</strong> Programme, die speziell auf die Bedürfnisse abgestimmt
+                    sind.
+                </li>
+            </ul>
+        </section>
+    </main>
+</div>
+<div class="d-flex justify-content-center m-3">
+    <div class="card m-1">
+        <div class="card-body">
+            <h5 class="card-title">Trainingspläne</h5>
+            <p class="card-text">This is a simple card with some text content.</p>
+            <a class="btn btn-primary">Trainingspläne Beeinträchtigte</a>
+
         </div>
     </div>
-
-    <div class="explanation">
-        <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
-        <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+    <div class="card m-1">
+        <div class="card-body">
+            <h5 class="card-title">Trainingspläne</h5>
+            <p class="card-text">This is a simple card with some text content.</p>
+            <a class="btn btn-primary">Trainingspläne ältere Menschen</a>
+        </div>
     </div>
+</div>
 
-    <footer>
-        <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
-    </footer>
+<div class="explanation">
+    <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
+    <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder
+        gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern,
+        während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um
+        einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+</div>
+
+<footer class="footer">
+    <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
+</footer>
 </body>
 </html>
