--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -71,7 +71,7 @@
         <div class="card-body">
             <h5 class="card-title">Trainingspläne</h5>
             <p class="card-text">This is a simple card with some text content.</p>
-            <a class="btn btn-primary">Trainingspläne ältere Menschen</a>
+            <a href="trainings-plan-old.html" class="btn btn-primary">Trainingspläne ältere Menschen</a>
         </div>
     </div>
 </div>
