--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -22,8 +22,7 @@
             </ul>
         </div>
     </div>
-    <h1 class="title">Trainingpläne</h1>
-
+    <h1 class="title">Trainingspläne</h1>
     <div class="logo-wrapper">
         <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
     </div>
