linked new page and added content

--- a/fitness-and-health-website/trainings-plan-disabled.html
+++ b/fitness-and-health-website/trainings-plan-disabled.html
@@ -2,18 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
   <title>Trainingspläne für Beeinträchtigte</title>
 </head>
 <body>
 <div class="top-bar">
   <div class="menu-button-wrapper">
     <div class="menu-button">
-      <span>☰</span>
+      <a href="trainings-plan.html"><span>⮐</span></a>
     </div>
-
   </div>
-  <h1 class="title">Trainingspläne</h1>
+  <h1 class="title">Trainingspläne für Beeinträchtigte</h1>
   <div class="logo-wrapper">
     <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
   </div>
