added content on other page

--- a/fitness-and-health-website/trainings-plan-old.html
+++ b/fitness-and-health-website/trainings-plan-old.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Trainingspläne für Ältere</title>
-
     <meta charset="UTF-8">
+    <title>Trainingspläne für Ältere</title>
 </head>
 <body>
-
+<div class="top-bar">
+    <div class="menu-button-wrapper">
+        <div class="menu-button">
+            <a href="trainings-plan.html"><span>⮐</span></a>
+        </div>
+    </div>
+    <h1 class="title">Trainingspläne für Ältere</h1>
+    <div class="logo-wrapper">
+        <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
+    </div>
+</div>
 </body>
 </html>
