linked and styled subpages

--- a/fitness-and-health-website/trainings-plan-disabled.html
+++ b/fitness-and-health-website/trainings-plan-disabled.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="stylesheet-training-plan-subpages.css">
   <title>Trainingspläne für Beeinträchtigte</title>
 </head>
 <body>
 <div class="top-bar">
   <div class="menu-button-wrapper">
     <div class="menu-button">
-      <a href="trainings-plan.html"><span>⮐</span></a>
+      <a style="color: yellow" href="trainings-plan.html"><span>⮐</span></a>
     </div>
   </div>
   <h1 class="title">Trainingspläne für Beeinträchtigte</h1>
