--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -60,9 +60,9 @@
 <div class="d-flex justify-content-center m-3">
     <div class="card m-1">
         <div class="card-body">
-            <h5 class="card-title">Trainingspläne</h5>
-            <p class="card-text">This is a simple card with some text content.</p>
-            <a href="trainings-plan-disabled.html" class="btn btn-primary">Trainingspläne Beeinträchtigte</a>
+            <h5 class="card-title">Beeinträchtigte</h5>
+            <p class="card-text">Link zu den Trainingsplänen</p>
+            <a href="trainings-plan-disabled.html" class="btn btn-primary">Entdecke mehr</a>
 
         </div>
     </div>
