--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -68,9 +68,9 @@
     </div>
     <div class="card m-1">
         <div class="card-body">
-            <h5 class="card-title">Trainingspläne</h5>
-            <p class="card-text">This is a simple card with some text content.</p>
-            <a href="trainings-plan-old.html" class="btn btn-primary">Trainingspläne ältere Menschen</a>
+            <h5 class="card-title">Ältere</h5>
+            <p class="card-text">Link zu den Trainingsplänen</p>
+            <a href="trainings-plan-old.html" class="btn btn-primary">Entdecke mehr</a>
         </div>
     </div>
 </div>
