--- a/fitness-and-health-website/shopping-basket.html
+++ b/fitness-and-health-website/shopping-basket.html
@@ -7,24 +7,28 @@
     <title>Warenkorb</title>
 </head>
 <body>
-<div class="top-bar navbar navbar-dark">
-    <div class="homeButton-wrapper position-relative" style = "float: left;">
-        <button class="homeButton"></button>
-        <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
-            <ul class="nav flex-column">
-                <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
-                <li class="nav-item li-items-in-sidebar"><a href="shop.html" class="nav-link text-in-sidebar">Shop</a></li>
-                <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
-                <li class="nav-item li-items-in-sidebar"><a href="nutrition.html" class="nav-link text-in-sidebar">Ernährung</a></li>
-                <li class="nav-item li-items-in-sidebar"><a href="about-us.html" class="nav-link text-in-sidebar">Über uns</a></li>
+<div class="top-bar">
+    <div class="menu-button-wrapper">
+        <div class="menu-button">
+            <span>☰</span>
+        </div>
+        <div class="sidebar">
+            <ul>
+                <li class="li-items-in-sidebar"><a href="index.html" class="text-in-sidebar">Startseite</a></li>
+                <li class="li-items-in-sidebar"><a href="shop.html" class="text-in-sidebar">Shop</a></li>
+                <li class="li-items-in-sidebar"><a href="trainings-plan.html" class="text-in-sidebar">Training</a></li>
+                <li class="li-items-in-sidebar"><a href="nutrition.html" class="text-in-sidebar">Ernährung</a></li>
+                <li class="li-items-in-sidebar"><a href="about-us.html" class="text-in-sidebar">Über uns</a></li>
             </ul>
         </div>
     </div>
-    <h1 class = "header-in-shopping-basket">Warenkorb</h1>
+    <h1 class="title">Warenkorb</h1>
+
+    <div class="logo-wrapper">
+        <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
+    </div>
 </div>
-
-<div class="container mt-5">
-
+<div class="container" style="margin-top: 9%">
 
 
     <div class="row mt-4">
