--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -17,6 +17,7 @@
             <ul>
                 <li class="li-items-in-sidebar"><a href="index.html" class="text-in-sidebar">Startseite</a></li>
                 <li class="li-items-in-sidebar"><a href="shop.html" class="text-in-sidebar">Shop</a></li>
+                <li class="li-items-in-sidebar"><a href="trainings-plan.html" class="text-in-sidebar">Training</a></li>
                 <li class="li-items-in-sidebar"><a href="nutrition.html" class="text-in-sidebar">Ernährung</a></li>
                 <li class="li-items-in-sidebar"><a href="about-us.html" class="text-in-sidebar">Über uns</a></li>
             </ul>
